# Binary-Classification-with-Software-Defects-Dataset

./: .dvcignore  .pre-commit-config.yaml  README.md  dvc.yaml  env.example  makefile  pyproject.toml
.dvc/: config
.github/workflows/: ci-cd.yml
configs/: config.yaml  data_config.yaml  model_config.yaml  tensorrt_config.yaml  training_config.yaml
docs/source/: conf.py  index.rst  modules.rst  software-defect-prediction.api.rst  software-defect-prediction.data.rst  software-defect-prediction.inference.rst  software-defect-prediction.models.rst  software-defect-prediction.pipelines.rst  software-defect-prediction.rst  software-defect-prediction.training.rst  software-defect-prediction.utils.rst  tests.rst
reports/: eda_report.txt
scripts/: check_installation.py  convert_to_onnx.py  convert_to_tensorrt.py  convert_to_triton.py  data_preprocessing.py  download_data.py  exploratory_analysis.py  generate_configs.py  run_mlflow.py
software_defect_prediction/api/: app.py  triton_client.py
software_defect_prediction/data/: datamodule.py  dataset.py
software_defect_prediction/inference/: cli.py  predictor.py
software_defect_prediction/models/: metric.py  model.py
software_defect_prediction/pipelines/: inference_pipeline.py  train_pipeline.py
software_defect_prediction/training/: trainer.py
software_defect_prediction/tuning/: callbacks.py
software_defect_prediction/utils/: logging.py
tests/: conftest.py  test_imports.py  test_inference.py  test_model.py  test_predictor.py
triton_models/: Dockerfile.client  docker-compose.yml
(+1 files in other folders)
